<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:id="@+id/settingsLayout"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarsettings"
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsTitle"
                android:textColor="#fff"
                android:textSize="21dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:text="@string/themeTitle"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/themeDesc" />

<!--        <Switch-->
<!--            android:id="@+id/switch_theme"-->
<!--            android:layout_gravity="left"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:text="Tema Escuro"-->
<!--            />-->

        <TextView
            android:id="@+id/txt_termsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termsConditions"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:onClick="checkTerms"/>
        <TextView
            android:id="@+id/txt_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termsConditionsDesc"
            android:layout_marginLeft="20dp"
            android:onClick="checkTerms"/>

        <TextView
            android:id="@+id/txt_spinnerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinnerTitle"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:onClick="checkTerms"/>

        <RelativeLayout
            android:id="@+id/showlangdialog"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal"
            android:onClick="changeLanguageDialog">

            <TextView
                android:id="@+id/txtViewLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:dropDownVerticalOffset="35dp"
                android:gravity="center"
                android:popupBackground="@color/blue"
                android:text="@string/language"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_arrow_drop_down" />
        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>