<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sessions_step3"
    android:id="@+id/sessionsStep3_Layout"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarsessionsStep3"
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sessionsTitle"
                android:textColor="#fff"
                android:textSize="21dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <com.shuhart.stepview.StepView
            android:id="@+id/step_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:sv_animationType="None"
            app:sv_stepPadding="12dp" />

        <TextView
            android:id="@+id/textTitleData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textSize="25dp"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="22dp"
            android:text="01/01/2000"/>

        <TextView
            android:id="@+id/textTitleHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="22dp"
            android:text="@string/hour"/>

        <TextView
            android:id="@+id/textViewHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="22dp"
            android:text="11:30 - 12:00"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btn_next"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:enabled="true"
            android:onClick="btn_concluir3Clicked"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_prev"
            android:enabled="true"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="@string/previous"
            android:onClick="btn_prev3Clicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>