<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotpasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="375dp"
        android:layout_height="135dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sem_fundo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="93dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/playfairdisplay_regular"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/user_email_recover"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/transperent_edittxt"
        android:ems="10"
        android:fontFamily="@font/playfairdisplay_regular"
        android:gravity="center"
        android:hint="@string/insertEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="#ffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_recover"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/playfairdisplay_regular"
        android:text="@string/resetPassword"
        android:textSize="18dp"
        android:onClick="btn_recoverPressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_recover"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBarForgot_password"
        android:layout_width="88dp"
        android:layout_height="126dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progressbar_circle"></com.airbnb.lottie.LottieAnimationView>

</androidx.constraintlayout.widget.ConstraintLayout>